--- a/analysis/02_IID_Analysis.Rmd
+++ b/analysis/02_IID_Analysis.Rmd
@@ -1,22 +1,21 @@
 ---
-title: "01_Randomized_Analysis"
+title: "02_IID_Analysis"
 output: html_document
 ---
 
-```{r load-library}
-# File Purpose: To analyze the results obtained from the Monte Carlo simulation conducted in 01_Randomized_Cluster_Simulation.R
+```{r}
 library(tidyverse)
 library(knitr)
 library(kableExtra)
 library(here)
 options(scipen = 999)
-MC_Random_Results<- read_csv(here::here("cluster-computed-csv", "MC-Random-Results.csv"))
+MC_Observed_Results<- read_csv(here::here("cluster-computed-csv", "MC-Observed-Results.csv"))
 ```
 
-# Computing confidence intervals of Monte Carlo estimates
+# Computing 95% CI
 
 ```{r}
-MC_Random_Results <- MC_Random_Results |>
+MC_Observed_Results <- MC_Observed_Results |>
   mutate(bias = ATE_est - ATE,
          bias_low = bias - (1.96 * bias_se),
          bias_high = bias + (1.96 * bias_se),
@@ -29,7 +28,7 @@ MC_Random_Results <- MC_Random_Results |>
 # Table of computed results
 
 ```{r echo=F}
-table <- MC_Random_Results |>
+table <- MC_Observed_Results |>
   dplyr::select(ATE, bias, variance, coverage, bias_low, bias_high, cov_low, cov_high) 
 ```
 
@@ -52,5 +51,3 @@ table[9:16, ] |>
   add_header_above(c("Monte Carlo Results" = 4, "95% CI" = 4)) |>
   kable_styling()
 ```
-
-
