--- a/analysis/02_IID_Analysis.Rmd
+++ b/analysis/02_IID_Analysis.Rmd
@@ -21,7 +21,7 @@ MC_Observed_Results <- MC_Observed_Results |>
          bias_high = bias + (1.96 * bias_se),
          cov_low = coverage - (1.96 * cov_se),
          cov_high = coverage + (1.96 * cov_se)) |> 
-  arrange(desc(independent), ICC, desc(size), desc(parametric)) |>
+  arrange(desc(independent), desc(size), desc(parametric)) |>
   dplyr::select(-`...1`)
 ```
 
@@ -35,17 +35,17 @@ table <- MC_Observed_Results |>
 ### Classification Independent of Covariates (Order is the Same as Paper)
 
 ```{r echo = F}
-table[1:8, ] |>
+table[1:4, ] |>
   kable() |>
   add_header_above(c(" " = 8)) |>
   add_header_above(c("Monte Carlo Results" = 4, "95% CI" = 4)) |>
   kable_styling()
 ```
 
-# Classification Dependent on Covariates (Order is the Same as Paper)
+### Classification Dependent on Covariates (Order is the Same as Paper)
 
 ```{r echo = F}
-table[9:16, ] |>
+table[5:8, ] |>
   kable() |>
   add_header_above(c(" " = 8)) |>
   add_header_above(c("Monte Carlo Results" = 4, "95% CI" = 4)) |>
