--- a/analysis/04_Clustered_Analysis.Rmd
+++ b/analysis/04_Clustered_Analysis.Rmd
@@ -30,7 +30,7 @@ MC_Clustered_Results <- MC_Clustered_Results |>
 
 ```{r echo=F}
 table <- MC_Clustered_Results |>
-  dplyr::select(ATE, bias, variance, coverage, bias_low, bias_high, cov_low, cov_high) 
+  dplyr::select(ATE, bias, variance, coverage, bias_low, bias_high, cov_low, cov_high, size) 
 ```
 
 ### Classification Independent of Covariates (Order is the Same as Paper)
@@ -38,8 +38,8 @@ table <- MC_Clustered_Results |>
 ```{r echo = F}
 table[1:8, ] |>
   kable() |>
-  add_header_above(c(" " = 8)) |>
-  add_header_above(c("Monte Carlo Results" = 4, "95% CI" = 4)) |>
+  add_header_above(c(" " = 9)) |>
+  add_header_above(c("Monte Carlo Results" = 4, "95% CI" = 4, "size" = 1)) |>
   kable_styling()
 ```
 
@@ -48,7 +48,7 @@ table[1:8, ] |>
 ```{r echo = F}
 table[9:16, ] |>
   kable() |>
-  add_header_above(c(" " = 8)) |>
-  add_header_above(c("Monte Carlo Results" = 4, "95% CI" = 4)) |>
+  add_header_above(c(" " = 9)) |>
+  add_header_above(c("Monte Carlo Results" = 4, "95% CI" = 4, "size" = 1)) |>
   kable_styling()
 ```
